--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=restful-web-services
 logging.level.org.springframework=info
+management.endpoints.web.exposure.include=*
+spring.h2.console.enabled=true
